--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: jekyll-test
+title: techfreak.net
 ---
 <h2 id="intro">The five most recent posts.</h2>
 {% for post in site.posts limit:5 %}
